--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "package.json": "^2.0.1"
   }
 }
