--- a/Client/ClickerGame/app/build.gradle
+++ b/Client/ClickerGame/app/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.github.kittinunf.fuel:fuel:2.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    final retrofit_version = '2.6.1'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
