--- a/Client/ClickerGame/app/build.gradle
+++ b/Client/ClickerGame/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.github.kittinunf.fuel:fuel:2.2.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.android.support:design:28.0.0'
     final retrofit_version = '2.6.1'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
